apps/authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingressroute
  namespace: identity
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.macbytes.io`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
      services:
        - name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: authentik-tls-certificate
